Add adaptive widget engine, renderer and Liquid Glass design system
- Widget layout engine that fits any launcher size (1x1 to tablet page)
  by scoring arrangement templates; JVM-tested for all sizes.
- Canvas widget renderer with five styles (glass, living sky, clear,
  tonal, paper), per-size RemoteViews, bitmap memory budgeting,
  generated previews and render ticks for time-accurate content.
- AGSL Liquid Glass lens, living sky, precipitation and window-pane
  shaders; haptics, tilt lighting, glass controls and typography.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014VsCMqPGtS92FpaWDiRjsh